--- a/.gitignore
+++ b/.gitignore
@@ -104,6 +104,20 @@ venv.bak/
 .mypy_cache/
 
 ### PYCHARM
-.idea
-.idea/*
-.idea/*/*
+.idea/
+
+### VIM
+# Swap
+[._]*.s[a-v][a-z]
+[._]*.sw[a-p]
+[._]s[a-v][a-z]
+[._]sw[a-p]
+
+# Session
+Session.vim
+
+# Temporary
+.netrwhist
+*~
+# Auto-generated tag files
+tags
