--- a/requirements.txt
+++ b/requirements.txt
@@ -2,6 +2,8 @@ cycler==0.10.0
 kiwisolver==1.0.1
 matplotlib==2.2.2
 numpy==1.14.2
+pandas==0.22.0
+pydub==0.21.0
 pyparsing==2.2.0
 python-dateutil==2.7.2
 pytz==2018.3
