finished mono/multipitch code + onsets and explained monopitch w/ code

--- a/docs/_output.yml
+++ b/docs/_output.yml
@@ -1,5 +1,6 @@
 bookdown::pdf_book:
   toc: true
+  keep_tex: true
   number_sections: true
   fig_caption: true
   fig_height: 2
@@ -9,7 +10,7 @@ bookdown::pdf_book:
 bookdown::html_document2:
   toc: true
   toc_float: true
-  number_sections: false
+  number_sections: true
   theme: simplex
   fig_caption: true
   css: include/styles.css
