--- a/docs/_bookdown.yml
+++ b/docs/_bookdown.yml
@@ -1,10 +1,11 @@
-book_filename: index.rmd
+book_filename: doc.rmd
 site: "bookdown::bookdown_site"
 delete_merged_file: true
 rmd_files:
-  - main.rmd
+  - index.rmd
   - parts/0_intro.md
   - parts/1_background.md
   - parts/2_pitch.md
   - parts/3_onset.md
   - parts/4_conclusion.md
+output_dir: book
