Restored HTML and PDF

--- a/docs/Makefile
+++ b/docs/Makefile
@@ -4,6 +4,7 @@ doc: pdf html
 pdf: index.rmd
 	@echo "rendering pdf book..."
 	Rscript -e "bookdown::render_book('$<', 'bookdown::pdf_book', output_file='book.pdf')"
+	[ -f book/book.pdf ] && mv book/book.pdf report.pdf
 	@echo "done!"
 
 html: index.rmd
