--- a/.travis.yml
+++ b/.travis.yml
@@ -15,9 +15,9 @@ env:
 
 
 before_script:
-  - chmod +x build.sh
-  - chmod +x deploy.sh
+  - chmod +x docs/build.sh
+  - chmod +x docs/deploy.sh
 
 script:
-  - ./build.sh
-  - ./deploy.sh
+  - ./docs/build.sh
+  - ./docs/deploy.sh
