--- a/.travis.yml
+++ b/.travis.yml
@@ -2,7 +2,7 @@ language: r
 cache: packages
 pandoc_version: 2.5
 before_install:
-  - sudo apt-get -y python3-pip python3-virtualenv
+  - sudo apt-get -y install python3 python3-pip python3-virtualenv
 
 env:
   global:
