--- a/.travis.yml
+++ b/.travis.yml
@@ -2,7 +2,7 @@ language: r
 cache: packages
 pandoc_version: 2.5
 before_install:
-  - sudo apt-get -y install python3 python3-pip python3-virtualenv
+  - sudo apt-get -y install python3 python3-pip python3-venv
 
 env:
   global:
@@ -11,7 +11,9 @@ env:
 
 before_script:
   - rm -rf venv && python3 -m venv venv
+  - source venv/bin/activate
   - pip3 install -r requirements.txt
+  - deactivate
   - chmod +x docs/build.sh
   - chmod +x docs/deploy.sh
 
