--- a/.travis.yml
+++ b/.travis.yml
@@ -2,9 +2,11 @@ language: r
 cache: packages
 pandoc_version: 2.5
 before_install:
-  - sudo apt-get update
+  - sudo add-apt-repository -y ppa:deadsnakes/ppa
+  - sudo apt-get -q update
   - sudo apt-get -y install python3.8 python3-pip python3.8-venv
   - python3 --version
+  - python3.8 --version
   - pip3 install --upgrade pip
 
 env:
